--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="m"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.SpearClient.Main.Game">
+        <activity android:name="com.example.SpearClient.Main.Game"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
